# BlobCtrl

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
assets/docs/: blobnet.txt
assets/results/demo/enlarge_deer/state/: state.json
assets/results/demo/move_cup/state/: state.json
assets/results/demo/replace_knife/state/: state.json
blobctrl/: __init__.py
blobctrl/models/: __init__.py  blobnet.py
blobctrl/pipelines/: __init__.py  pipeline_blobnet.py
blobctrl/utils/: __init__.py  utils.py
diffusers/src/diffusers/models/: __init__.py
diffusers/src/diffusers/models/unets/: unet_2d_blocks.py
diffusers/src/diffusers/pipelines/: __init__.py
examples/blobctrl/: blobctrl_app.py  blobctrl_inference.py  download_models.py
examples/blobctrl/assets/results/demo/compose_cake/state/: state.json
examples/blobctrl/assets/results/demo/compose_rabbit/state/: state.json
examples/blobctrl/assets/results/demo/move_hat/state/: state.json
examples/blobctrl/assets/results/demo/remove_cow/state/: state.json
examples/blobctrl/assets/results/demo/remove_shit/state/: state.json
examples/blobctrl/scripts/: download_models.sh  inference.sh  run_app.sh
examples/blobctrl/utils/: utils.py
scripts/: blobctrl_app.py  blobctrl_inference.py  download_models.py  download_models.sh  inference.sh  run_app.sh
src/diffusers/: __init__.py
src/diffusers/models/: __init__.py  blobnet.py
src/diffusers/models/unets/: unet_2d_condition.py
src/diffusers/pipelines/: __init__.py
src/diffusers/pipelines/blobnet/: __init__.py  pipeline_blobnet.py
(+2 files in other folders)
